# Q-algo

./: .gitignore  README.md
Yao_work/: Manifest.toml  Project.toml  hhl_Yao.jl  qpe_Yao.jl
Yao_work/src/: Yao_work.jl
cudaq-work/: hello_cudaq.py  requirements.txt
juliaQ-work/: juliaQiskit-demo.jl
pennylane-work/: requirements.txt
pennylane-work/qmc/: call_pennylane.py  readme.md
pennylane-work/qpe/: qpe_pennylane.py
pennylane-work/vqls/: vqls_pennylane.py
qiskit-work/: requirements.txt
qiskit-work/VQLS/: INSTALL.md  README.md  ecosystem.json  mypy.ini  pyproject.toml  tox.ini
qiskit-work/VQLS/docs/: beginners_guide.md  conf.py  index.rst  project_overview.md  quickstart_guide.md  technical_docs.md
qiskit-work/VQLS/docs/apidocs/: index.rst  vqls_prototype.rst
qiskit-work/VQLS/docs/how_tos/: 01_how_to_solve_linear_system.ipynb  02_how_to_use_circuits.ipynb  03_how_to_use_runtime.ipynb  04_how_to_control_options.ipynb  README.md
qiskit-work/VQLS/docs/technical_docs/: hadamard_test.md  matrix_decomposition.md  variational_linear_solver.md  vqls.md
qiskit-work/VQLS/docs/tutorials/: README.md  vqls.ipynb  vqls_runtime.ipynb
qiskit-work/VQLS/tests/: test_decomposition.py  test_hadamard.py  test_hybrid_qst_vqls.py  test_qst_vqls.py  test_tomography.py  test_vqls.py
qiskit-work/VQLS/vqls_prototype/solver/: vqls.py
qiskit-work/qmc/: call_qiskit.py
qrisp-work/: helloworld_qrisp.py  jax-demo.py  qpe_qrisp.py  requirements.txt
qrisp-work/hhl/: hhl_qrisp.py
qrisp-work/qmc/: qmc_qrisp.py
